# agnoclaw

./: .agnoclaw.toml.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml
cookbook/: 01_context_providers.py  02_agentos_export.py  03_elevated_commands.py  04_plan_signals.py  05_sandbox_modes.py  06_pack_system.py  07_lifecycle_hooks.py  08_remote_client.py  09_sdk_ergonomics.py  10_scheduler_persistence.py
docs/: claude-code-gaps.md  harness-gap-analysis.md  skills.md  vision.md  workspace.md
docs/embedding/: README.md  agentos-adapter.md  pe-risk-testing-plan.md  policy-and-guardrails.md  workspace-backends.md
examples/: _utils.py  basic_agent.py  browser_demo.py  claude_code_tools.py  cron_jobs.py  custom_tools.py  deep_research.py  heartbeat_demo.py  hitl_learning.py  llm_sandbox_backend.py  mcp_demo.py  multi_agent_team.py  multi_provider.py  ollama_local.py  openclaw_skills.py  openclaw_style.py  per_run_dependencies.py  persistent_session.py  plan_mode_demo.py  progress_tracking.py  self_improving_agent.py  skill_demo.py  skillhub_demo.py  team_with_learning.py  tool_arg_bindings.py  user_memory_demo.py  workspace_demo.py
examples/legal_rag/: README.md  basic_contract_rag.py  clause_aware_chunking.py  contract_analysis_team.py  custom_toolkit.py  data_agent_rag.py  hybrid_contract_rag.py  risk_assessment.py
examples/legal_rag/sample_contracts/: msa.txt  nda.txt  service_agreement.txt
examples/pe_risk_platform/: README.md  __init__.py  deal_pack_builder.py  deal_pack_schema.md  harness_chat.py  quality_gates.py  rubric_tools.py  scoring_engine.py  service.py  simulate_embedding.py
examples/pe_risk_platform/fixtures/deals/: PE-2026-001-northstar-vertical-software.json  PE-2026-002-harbor-industrial-components.json  PE-2026-003-vitalbridge-healthcare-services.json  PE-2026-004-lumina-consumer-rollup.json
examples/pe_risk_platform/rubrics/: pe_deal_risk_rubric_v1.json
examples/pe_risk_platform/skills_templates/: pe-deal-scoring.SKILL.template.md  pe-due-diligence-lifecycle.SKILL.template.md
skills/code-review/: SKILL.md
skills/contract-analyzer/: SKILL.md
skills/daily-standup/: SKILL.md
skills/deep-research/: SKILL.md
skills/git-workflow/: SKILL.md
skills/memory-manage/: SKILL.md
skills/self-improving-agent/: SKILL.md
skills/skillhub/: SKILL.md
spec/: v0.2-harness-core.md  v0.8-harness-sdk-server-packs.md
src/agnoclaw/: __init__.py  agent.py  backends.py  config.py  memory.py  packs.py  plugins.py  remote.py  teams.py  workspace.py
src/agnoclaw/cli/: __init__.py  async_repl.py  bootstrap.py  main.py
src/agnoclaw/heartbeat/: __init__.py  daemon.py
src/agnoclaw/integrations/: __init__.py  llm_sandbox.py
src/agnoclaw/prompts/: __init__.py  sections.py  system.py
src/agnoclaw/runtime/: __init__.py  agentos.py  context.py  errors.py  events.py  guardrails.py  hooks.py  permissions.py  policy.py  scheduler.py
src/agnoclaw/skills/: __init__.py  backends.py  hub.py  loader.py  registry.py
src/agnoclaw/tools/: __init__.py  backends.py  bash.py  browser.py  browser_backends.py  files.py  mcp.py  media.py  notebook.py  tasks.py  web.py
src/agnoclaw/tui/: DEBT.md  __init__.py  app.py  driver.py  events.py  screens.py
src/agnoclaw/tui/widgets/: __init__.py  chat_log.py  composer_assist_bar.py  header_bar.py  input_bar.py  log_viewer.py  notification_panel.py  session_picker.py  status_bar.py
tests/: _ollama.py  conftest.py  test_agent.py  test_agent_coverage.py  test_agentos_adapter.py  test_browser.py  test_cli.py  test_cli_bootstrap.py  test_config.py  test_context_providers.py  test_errors.py  test_heartbeat.py  test_integration.py  test_llm_sandbox_backend.py  test_llm_sandbox_live.py  test_mcp.py  test_media.py  test_memory.py  test_notebook.py  test_ollama_harness_integration.py  test_packs.py  test_pe_embedding_library.py  test_pe_risk_platform.py  test_pe_risk_service.py  test_pe_rubric_tools.py  test_permissions.py  test_plugins.py  test_prompts.py  test_registry_coverage.py  test_remote.py  test_run_context_scope.py  test_runtime_contracts.py  test_skillhub.py  test_skills.py  test_teams.py  test_tool_arg_bindings.py  test_tool_scoping.py  test_tools.py  test_tui_app_commands.py  test_web.py  (+1 more)
