[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agnoclaw"
version = "0.6.0"
description = "A hackable, model-agnostic agent harness built on Agno — with Claude Code's prompt wisdom, OpenClaw's UX patterns, and full Python extensibility"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "agnoclaw contributors" }]
keywords = ["ai", "agents", "llm", "harness", "agno", "claude", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core framework
    "agno>=2.5.0",
    # Config
    # tomli not needed — Python 3.13+ has tomllib in stdlib
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Frontmatter parsing (for SKILL.md)
    "python-frontmatter>=1.0.0",
    # Scheduling (heartbeat)
    "apscheduler>=3.10.0",
    # Web tools
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    # File tools
    "pathspec>=0.12.0",
    # Storage (default: SQLite via agno)
    "sqlalchemy>=2.0.0",
    # Search
    "duckduckgo-search>=7.0.0",
    # Default provider (Anthropic / Claude)
    "anthropic>=0.83.0",
]

[project.optional-dependencies]
# Basic CLI (Click REPL + Rich output)
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]
# Full Textual TUI (textual brings rich transitively)
tui = [
    "textual>=0.85.0",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.0",
]
# Personal-assistant setup: TUI + cron scheduling
full = [
    "agnoclaw[tui]",
    "croniter>=1.3.0",
]
postgres = [
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
]
# Local / offline models via Ollama (no API key required)
# Install: uv sync --extra local
# Requires Ollama daemon running: https://ollama.com
local = [
    "ollama>=0.6.1",
    "openai>=2.0.0",  # Agno's Ollama transport uses openai's HTTP client
]
all-models = [
    "anthropic>=0.40.0",
    "openai>=2.0.0",
    "ollama>=0.6.1",
    "google-generativeai>=0.8.0",
    "groq>=0.11.0",
]
# Browser automation (Playwright)
browser = [
    "playwright>=1.40.0",
]
# MCP (Model Context Protocol) server integration
mcp = [
    "mcp>=1.0.0",
]
# Media tools (PDF, images)
media = [
    "pymupdf>=1.23.0",
]
# RAG (Retrieval-Augmented Generation) examples
rag = [
    "lancedb>=0.4.0",
    "tantivy>=0.22.0",
    "pymupdf>=1.23.0",
]
# Notebook tools
notebook = [
    "nbformat>=5.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "textual-dev>=1.0.0",
    "openai>=2.0.0",    # Agno uses openai as transport; needed by team model resolution tests
    "nbformat>=5.9.0",  # needed by notebook toolkit tests
]

[project.scripts]
agnoclaw = "agnoclaw.cli.bootstrap:main"

[project.urls]
Homepage = "https://github.com/yogin16/agnoclaw"
Documentation = "https://github.com/yogin16/agnoclaw#readme"
Repository = "https://github.com/yogin16/agnoclaw"
Issues = "https://github.com/yogin16/agnoclaw/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agnoclaw"]

[tool.hatch.build.targets.wheel.shared-data]
"skills" = "share/agnoclaw/skills"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/agnoclaw"]
omit = [
    "*/cli/*",     # CLI tested via Click test runner, not coverage
    "*/tui/*",     # TUI requires Textual display, tested separately
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
show_missing = true
